; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_pmeth_lib.c_EVP_PKEY_CTX_md.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_pmeth_lib.c_EVP_PKEY_CTX_md.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EVP_F_EVP_PKEY_CTX_MD = common dso_local global i32 0, align 4
@EVP_R_INVALID_DIGEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @EVP_PKEY_CTX_md(i32* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %11 = load i8*, i8** %9, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %17, label %13

13:                                               ; preds = %4
  %14 = load i8*, i8** %9, align 8
  %15 = call i32* @EVP_get_digestbyname(i8* %14)
  store i32* %15, i32** %10, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %13, %4
  %18 = load i32, i32* @EVP_F_EVP_PKEY_CTX_MD, align 4
  %19 = load i32, i32* @EVP_R_INVALID_DIGEST, align 4
  %20 = call i32 @EVPerr(i32 %18, i32 %19)
  store i32 0, i32* %5, align 4
  br label %28

21:                                               ; preds = %13
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load i32*, i32** %10, align 8
  %26 = bitcast i32* %25 to i8*
  %27 = call i32 @EVP_PKEY_CTX_ctrl(i32* %22, i32 -1, i32 %23, i32 %24, i32 0, i8* %26)
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %21, %17
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i32* @EVP_get_digestbyname(i8*) #1

declare dso_local i32 @EVPerr(i32, i32) #1

declare dso_local i32 @EVP_PKEY_CTX_ctrl(i32*, i32, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
